auto inspections fixes