@@ -19,7 +19,7 @@ import javax.sql.DataSource;
  *   <li>For PostgreSQL, we append {@code options=-c default_transaction_read_only=on} to the URL
  *       (unless the user already specified {@code options=} themselves) so that every transaction
  *       in the session is read-only on the server side — this blocks even DDL.</li>
- *   <li>For Oracle and SQL Server, the upstream {@code ReadOnlyGuard} is the primary defence;
+ *   <li>For Oracle and SQL Server, the upstream {@code ReadOnlyGuard} is the primary defense;
  *       pooled connections are still marked read-only as a best-effort JDBC hint.</li>
  * </ul>
  */
@@ -55,7 +55,7 @@ public class DataSourceConfig {
         hikari.setReadOnly(true);
         hikari.setAutoCommit(true);
         hikari.setMaximumPoolSize(Math.max(1, properties.poolMaximumSize()));
-        hikari.setMinimumIdle(Math.max(0, Math.min(properties.poolMinimumIdle(), properties.poolMaximumSize())));
+        hikari.setMinimumIdle(Math.clamp(properties.poolMinimumIdle(), 0, properties.poolMaximumSize()));
         hikari.setConnectionTimeout(Math.max(250L, properties.connectionTimeoutMs()));
         hikari.setValidationTimeout(Math.max(250L, properties.validationTimeoutMs()));
         hikari.setIdleTimeout(Math.max(10_000L, properties.idleTimeoutMs()));
